--- a/NewPortal/News_Portal/templates/news_detail.html
+++ b/NewPortal/News_Portal/templates/news_detail.html
@@ -6,4 +6,5 @@
   <h1>{{ post.title|censor }}</h1>
   <p><strong>Дата публикации:</strong> {{ post.created_at|date:"d.m.Y" }}</p>
   <p>{{ post.text|censor }}</p>
+<a href="{% url 'news' %}">Перейти к списку новостей</a>
 {% endblock %}
